# aterm

./: CLAUDE.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/agent-sessions/: Cargo.toml
crates/agent-sessions-cli/: Cargo.toml
crates/agent-sessions-cli/src/: main.rs
crates/agent-sessions/src/: extract.rs  lib.rs  live.rs  metadata.rs  proc.rs  provider.rs  transfer.rs  types.rs
crates/agent-sessions/src/providers/: claude.rs  codex.rs  factory.rs  gemini.rs  goose.rs  mod.rs  opencode.rs  qwen.rs
crates/aterm/: Cargo.toml
crates/aterm-pro/: Cargo.toml
crates/aterm-pro-api/: Cargo.toml
crates/aterm-pro-api/src/: lib.rs
crates/aterm-pro/src/: lib.rs
crates/aterm/src/: app.rs  backup.rs  commands.rs  groups.rs  license.rs  main.rs  persist.rs  pro.rs  service_status.rs  sessions.rs  settings.rs  templates.rs  theme.rs
crates/aterm/src/term/: input.rs  mod.rs  render.rs
docs/: providers-roadmap.md
vscode-extension/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/media/webview/: index.html  main.css  main.js
vscode-extension/scripts/: build-vsix.sh  sign-license.mjs
vscode-extension/src/: extension.ts  license.ts  pro-api.d.ts
