# aterm — native terminal with a built-in coding-agent session manager.
# Workspace: `agent-sessions` (vendored session-discovery core) + `aterm` (the app).
[workspace]
resolver = "2"
members = ["crates/agent-sessions", "crates/aterm"]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
