# aterm — native terminal with a built-in coding-agent session manager.
# Workspace: `agent-sessions` (session-discovery core) + `aterm` (the app) +
# `agent-sessions-cli` (JSON sidecar for the VS Code extension).
[workspace]
resolver = "2"
members = ["crates/agent-sessions", "crates/agent-sessions-cli", "crates/aterm"]

[workspace.package]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
