# aterm — the app: native window (egui) hosting a terminal grid + the agent
# session panel. The VT model/PTY/parser/read-loop come from alacritty_terminal;
# session discovery from the vendored `agent-sessions` crate.
[package]
name = "aterm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Native terminal with a built-in coding-agent session manager"

[[bin]]
name = "aterm"
path = "src/main.rs"

[dependencies]
agent-sessions = { path = "../agent-sessions" }
alacritty_terminal = "0.25"
egui = "0.29"
eframe = "0.29"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
