# aterm — the app: native window (egui) hosting a terminal grid + the agent
# session panel. The VT model/PTY/parser/read-loop come from alacritty_terminal;
# session discovery from the vendored `agent-sessions` crate.
[package]
name = "aterm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Native terminal with a built-in coding-agent session manager"

[[bin]]
name = "aterm"
path = "src/main.rs"

[features]
# Official build: pulls in the private Pro features. Community build omits it.
pro = ["dep:aterm-pro"]

[dependencies]
agent-sessions = { path = "../agent-sessions" }
aterm-pro-api = { path = "../aterm-pro-api" }
# Optional, private. Present only in the official build (--features pro).
aterm-pro = { path = "../aterm-pro", optional = true }
alacritty_terminal = "0.25"
egui = "0.29"
eframe = "0.29"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Catalog backup/restore (same zip layout as the sidecar, for interop).
zip = { version = "5", default-features = false, features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Used by `cargo deb` (the release workflow) to build the .deb package.
# Runtime deps cover the egui/eframe stack on Wayland and X11 hosts.
[package.metadata.deb]
maintainer = "Jesús Lorenzo <jesus.lorenzo@factorlibre.com>"
copyright = "2026, Factor Libre — MIT licensed"
section = "utils"
priority = "optional"
extended-description = """\
aterm is a native terminal that bundles a session manager for coding-agent
CLIs (Claude Code, Codex, OpenCode, Gemini). Lists, previews and resumes
sessions from a side panel; the terminal itself is built on alacritty_terminal."""
depends = "$auto, libxkbcommon0, libwayland-client0, libxcb1, libgl1, libfontconfig1"
assets = [
    ["target/release/aterm", "usr/bin/", "755"],
    ["target/release/agent-sessions-cli", "usr/bin/", "755"],
]
